2013-12-30  Marcus Mueller <znek@mulle-kybernetik.com>

	* Headers/GNUstepBase/GSVersionMacros.h: added macros
	GS_GCC_MINREQ(maj,min) and GS_CLANG_MINREQ(maj,min) to check for
	minimum required versions of GCC and CLANG compilers. Changed several
	occurrences of previous macros to improve readability.
	Added GS_PROTOCOLS_HAVE_OPTIONAL to correctly mark all appropriate
	declarations.
	* Headers/Foundation/NSNetServices.h,
	* Headers/Foundation/NSStream.h,
	* Headers/Foundation/NSXMLParser.h,
	* Headers/GNUstepBase/NSNetServices+GNUstepBase.h,
	* Source/GSNetServices.h:
	use GS_PROTOCOLS_HAVE_OPTIONAL macro where appropriate

2013-12-26  Marcus Mueller <znek@mulle-kybernetik.com>

	* Headers/Foundation/NSNetServices.h:
	* Source/GSAvahiNetService.m:
          added NSNetServiceListenForConnections option (introduced in
	  OSX 10.9) and accompanying delegate method, currently implemented in
	  GSAvahiNetService.m only.
	* Headers/Foundation/NSStream.h: fixed typo (_clang_ -> __clang__)

2013-12-24  Richard Frith-Macdonald <rfm@gnu.org>

        * Version: make ready for 1.24.6 release
        * Documentation/news.texi: 1.24.6 news
        * Documentation/ReleaseNotes.gsdoc: 1.24.6 release notes

2013-12-20 Graham Lee <graham@iamleeg.com>

	* Headers/Foundation/NSUUID.h:
	* Source/NSUUID.m: implemented for unix
	* Tests/base/NSUUID: testcases

2013-12-20 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: initialise defaults system at end of NSObject
	initialisation, in the hope of preventing deadlocks if the +initialize
	methods of other classes in different threads try to use defaults.
	May fix #39125

2013-12-20  Marcus Müller <znek@mulle-kybernetik.com>

	* Headers/Foundation/NSStream.h: OSX compatibilityy ... use formal
	protocol if possible (bug #40925).
	* Headers/GNUstepBase/GSVersionMacros.h: OSX 10.9 define added.
	* Headers/Foundation/NSRunLoop.h:
	* Source/NSRunLoop.m: Implement ([+mainRunLoop])

2013-12-13  Fred Kiefer <FredKiefer@gmx.de>
